ingress/basic_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /demo
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80

# here it will send traffic from external ip (NodePort) or LoadBalancer (lb dns) to backend service.
# if we dont provide / as rediret then ip:port/demo traffic will go to nginx-svc/demo
#to redirect to naginx-svc/ only set redirect rule
